--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-# Compiled class file
+# -------------------------
+# Java compiled files
+# -------------------------
 *.class
+*.jar
+*.war
+*.ear
+*.ser
 
-# Log file
+# Log files
 *.log
 
 # BlueJ files
@@ -10,15 +16,69 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# -------------------------
+# Package management
+# -------------------------
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Gradle
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+gradle-app.setting
+
+# Gradle GUI config
+.gradle/
+
+# -------------------------
+# IntelliJ IDEA
+# -------------------------
+.idea/
+*.iml
+*.ipr
+*.iws
+out/
+
+# IntelliJ plugin files
+.idea_modules/
+atlassian-ide-plugin.xml
+
+# -------------------------
+# Eclipse
+# -------------------------
+.project
+.classpath
+.cproject
+.settings/
+bin/
+tmp/
+
+# -------------------------
+# NetBeans
+# -------------------------
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+*.nb-gradle/
+
+# -------------------------
+# VS Code
+# -------------------------
+.vscode/
+
+# -------------------------
+# OS-specific files
+# -------------------------
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
